--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -1,5 +1,20 @@
 {% extends "network/layout.html" %}
+{% load static %}
 
+{% block head %}
+<script src="
+https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js
+"></script>
+<script src="{% static 'network/index.js' %}"></script>
+{% endblock %}
 {% block body %}
-    TODO
+    {% if user.is_authenticated %}
+    <div id="new-post">
+        <form id="create-post-form">
+            {% csrf_token %}
+            <input id="create-post-content" type="textarea" class="form-control" rows="4"> 
+            <input type="submit" class="btn btn-primary" value="Submit">
+        </form>
+    </div> 
+    {% endif %}
 {% endblock %}
