--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -20,4 +20,7 @@ https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js
     </form>
 </div>
 {% endif %}
+<div id="posts">
+
+</div>
 {% endblock %}
