PUT for likes working

--- a/network/static/network/styles.css
+++ b/network/static/network/styles.css
@@ -1,7 +1,8 @@
-body {
-    margin-left: 10px;
-    margin-right: 10px;
+.body {
+    margin-left: 30px;
+    margin-right: 60px;
 }
+
 
 .post-container {
     border-style: solid;
@@ -9,14 +10,21 @@ body {
     border-width: 1px;
     padding: 15px;
     border-radius: 10px;
-    margin: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .post-author {
     font-weight: bold;
     font-size: larger;
 }
+
 .post-timestamp-created {
     font-weight: lighter;
     font-size: smaller;
+}
+
+.like-button {
+    all: unset;
+    cursor: pointer;
 }
