pagination working on all posts

--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -23,4 +23,11 @@ https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js
 <div id="posts">
 
 </div>
+
+<nav id="page-navigation" aria-label="Page navigation">
+    <ul class="pagination">
+      <li id="previous-page" class="page-item"><a class="page-link" href="#">Previous</a></li>
+      <li id="next-page" class="page-item"><a class="page-link" href="#">Next</a></li>
+    </ul>
+  </nav>
 {% endblock %}
