--- a/network/templates/network/layout.html
+++ b/network/templates/network/layout.html
@@ -18,7 +18,7 @@
               <ul class="navbar-nav mr-auto">
                 {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><strong>{{ user.username }}</strong></a>
+                        <a class="nav-link font-weight-bold username-link" href="#">{{ user.username }}</a>
                     </li>
                 {% endif %}
                 <li class="nav-item">
